--- a/4. Source code front-end/index2.html
+++ b/4. Source code front-end/index2.html
@@ -96,14 +96,14 @@
 				<div class="icon"><p>VIP</p></div>
 				<p>Bàn 02</p>
 			</div>
-			<div class="table invalid" id="table3" onclick="window.location.href = 'index3.html'">
+			<div class="table invalid" id="table3" onclick="window.location.href = 'index3-2.html'">
 				<div class="icon">
 					<div class="cross"></div>
 					<p class="hide">VIP</p>
 				</div>
 				<p>Bàn 03</p>
 			</div>
-			<div class="table invalid" id="table4" onclick="window.location.href = 'index3.html'">
+			<div class="table invalid" id="table4" onclick="window.location.href = 'index3-2.html'">
 				<div class="icon">
 					<div class="cross"></div>
 					<p>VIP</p>
