--- a/4. Source code front-end/index9.html
+++ b/4. Source code front-end/index9.html
@@ -73,6 +73,17 @@
 		</div>
 	</div>
 	<div class="main-content">
+		<div class="department">
+			<div class="department-tag highlight" id="dpm1">
+				<p>Marketing</p>
+			</div>
+			<div class="department-tag darken" id="dpm2">
+				<p>Lễ tân</p>
+			</div>
+			<div class="department-tag darken" id="dpm3">
+				<p>Phục vụ</p>
+			</div>
+		</div>
 		<div class="add-new">
 			<button id="add-new-btn" onclick="window.location.href = 'index10.html'">Tạo mới</button>
 		</div>
