--- a/4. Source code front-end/index3-2.html
+++ b/4. Source code front-end/index3-2.html
@@ -550,7 +550,7 @@
 		<div class="popup-content">
 			<p>Chưa có thông tin khách hàng, tạo mới?</p>
 			<div class="popup-btn-container">
-				<button class="popup-cancel" onclick="window.location.href ='index2.html'">Hủy</button>
+				<button class="popup-cancel" onclick="deletephone()">Hủy</button>
 				<button class="popup-agree" onclick="window.location.href = 'index6.html'">Tạo mới</button>
 			</div>
 		</div>
